[gd_scene load_steps=4 format=2]

[ext_resource path="res://tileset/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://level.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 451.463, 214.083 )

[node name="level" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
collision_mask = 5
format = 1
tile_data = PoolIntArray( -458767, 0, 3, -458766, 0, 4, -458765, 0, 4, -458764, 0, 4, -458763, 0, 4, -458762, 0, 4, -458761, 0, 4, -458760, 0, 4, -458759, 0, 4, -458758, 0, 4, -458757, 0, 4, -458756, 0, 4, -458755, 0, 4, -458754, 0, 4, -458753, 0, 4, -524288, 0, 4, -524287, 0, 4, -524286, 0, 4, -524285, 0, 4, -524284, 0, 4, -524283, 0, 4, -524282, 0, 4, -524281, 0, 4, -524280, 0, 4, -524279, 0, 4, -524278, 0, 4, -524277, 0, 4, -524276, 0, 4, -524275, 0, 5, -393231, 0, 65539, -458739, 0, 65536, -327695, 0, 65539, -393203, 0, 65536, -262159, 0, 65539, -327675, 0, 196609, -327674, 0, 196610, -327673, 0, 196611, -327667, 0, 65536, -196623, 0, 65539, -262141, 0, 196608, -262131, 0, 65536, -131087, 0, 65539, -196595, 0, 65536, -65551, 0, 65539, -65548, 0, 196609, -65547, 0, 196610, -65546, 0, 196611, -131059, 0, 65536, -15, 0, 65539, -9, 0, 196609, -8, 0, 196610, -7, 0, 196611, -65523, 0, 65536, 65521, 0, 65539, 65529, 0, 196609, 65530, 0, 196610, 65531, 0, 196611, 3, 0, 196609, 4, 0, 196611, 6, 0, 0, 7, 0, 1, 8, 0, 1, 9, 0, 2, 13, 0, 65536, 131057, 0, 65539, 65542, 0, 196615, 65543, 0, 4, 65544, 0, 4, 65545, 0, 262147, 65549, 0, 65536, 196593, 0, 65539, 131078, 0, 327685, 131081, 0, 327685, 131085, 0, 65536, 262129, 0, 65539, 196621, 0, 65536, 327665, 0, 65539, 327677, 0, 196609, 327678, 0, 196610, 327679, 0, 196611, 262157, 0, 65536, 393201, 0, 65539, 393205, 0, 196609, 393206, 0, 196610, 393207, 0, 196610, 393208, 0, 196611, 327693, 0, 65536, 458737, 0, 327687, 458738, 0, 65545, 458739, 0, 131081, 458740, 0, 131081, 458741, 0, 131081, 458742, 0, 131081, 458743, 0, 131081, 458744, 0, 131081, 458745, 0, 131081, 458746, 0, 131081, 458747, 0, 131081, 458748, 0, 131081, 458749, 0, 131081, 458750, 0, 131081, 458751, 0, 131081, 393216, 0, 131081, 393217, 0, 131081, 393218, 0, 131081, 393219, 0, 196617, 393220, 0, 196617, 393221, 0, 196617, 393222, 0, 196617, 393223, 0, 196617, 393224, 0, 196617, 393225, 0, 196617, 393226, 0, 196617, 393227, 0, 196617, 393228, 0, 262153, 393229, 0, 327686 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -10.0343, -40.1807 )
shape = SubResource( 1 )

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2( -346.053, -136.516 )

[node name="SnakeSpawns" type="Node" parent="."]

[node name="SnakeSpawn" type="Node2D" parent="SnakeSpawns"]
position = Vector2( 266.379, -43.654 )

[node name="SnakeSpawn2" type="Node2D" parent="SnakeSpawns"]
position = Vector2( 216.488, -187.98 )

[node name="SnakeSpawn3" type="Node2D" parent="SnakeSpawns"]
position = Vector2( -289.543, 119.381 )

[node name="SnakeSpawn4" type="Node2D" parent="SnakeSpawns"]
position = Vector2( -232.525, -68.5991 )

[node name="Snakes" type="Node2D" parent="."]

[node name="TileMap2" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -458767, 0, 3, -458766, 0, 4, -458765, 0, 4, -458764, 0, 4, -458763, 0, 4, -458762, 0, 4, -458761, 0, 4, -458760, 0, 4, -458759, 0, 4, -458758, 0, 4, -458757, 0, 4, -458756, 0, 4, -458755, 0, 4, -458754, 0, 4, -458753, 0, 4, -524288, 0, 4, -524287, 0, 4, -524286, 0, 4, -524285, 0, 4, -524284, 0, 4, -524283, 0, 4, -524282, 0, 4, -524281, 0, 4, -524280, 0, 4, -524279, 0, 4, -524278, 0, 4, -524277, 0, 4, -524276, 0, 4, -524275, 0, 5, -393231, 0, 65539, -458739, 0, 65536, -327695, 0, 65539, -393203, 0, 65536, -262159, 0, 65539, -327675, 0, 196609, -327674, 0, 196610, -327673, 0, 196611, -327667, 0, 65536, -196623, 0, 65539, -262141, 0, 196608, -262131, 0, 65536, -131087, 0, 65539, -196595, 0, 65536, -65551, 0, 65539, -65548, 0, 196609, -65547, 0, 196610, -131071, 0, 196608, -131059, 0, 65536, -15, 0, 65539, -65523, 0, 65536, 65521, 0, 65539, 6, 0, 0, 7, 0, 1, 8, 0, 1, 9, 0, 2, 13, 0, 65536, 131057, 0, 65539, 65542, 0, 196615, 65543, 0, 4, 65544, 0, 4, 65545, 0, 262147, 65549, 0, 65536, 196593, 0, 65539, 131072, 0, 196609, 131073, 0, 196610, 131074, 0, 196611, 131078, 0, 327685, 131081, 0, 327685, 131085, 0, 65536, 262129, 0, 65539, 196621, 0, 65536, 327665, 0, 65539, 262157, 0, 65536, 393201, 0, 65539, 393205, 0, 196609, 393206, 0, 196610, 393207, 0, 196610, 393208, 0, 196611, 327693, 0, 65536, 458737, 0, 327687, 458738, 0, 65545, 458739, 0, 131081, 458740, 0, 131081, 458741, 0, 131081, 458742, 0, 131081, 458743, 0, 131081, 458744, 0, 131081, 458745, 0, 131081, 458746, 0, 131081, 458747, 0, 131081, 458748, 0, 131081, 458749, 0, 131081, 458750, 0, 131081, 458751, 0, 131081, 393216, 0, 131081, 393217, 0, 131081, 393218, 0, 131081, 393219, 0, 196617, 393220, 0, 196617, 393221, 0, 196617, 393222, 0, 196617, 393223, 0, 196617, 393224, 0, 196617, 393225, 0, 196617, 393226, 0, 196617, 393227, 0, 196617, 393228, 0, 262153, 393229, 0, 327686 )

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
